--- a/README.org
+++ b/README.org
@@ -2,30 +2,62 @@
 
 
 * Usage
-  The entire procedure,
-  #+BEGIN_SRC: R
-  pos<-rmbmix::sw.do(list.files(patt=".*pos.mzML"),fn_cmpd_list="ChemistryDashboard-Batch-Search_2019-05-15_07_27_26.csv",mode="pH")
-  pos_pmb<-rmbmix::mb.prep(pos)
-  pos_mb<-rmbmix::mb.do(pos_pmb)
-
-  neg<-rmbmix::sw.do(list.files(patt=".*neg.mzML"),fn_cmpd_list="ChemistryDashboard-Batch-Search_2019-05-15_07_27_26.csv",mode="mH")
-  neg_pmb<-rmbmix::mb.prep(neg)
-  neg_mb<-rmbmix::mb.do(neg_pmb)
-
-  #+END_SRC
+** Prescreening
+   1. Generate prescreening data frames,
+      #+BEGIN_SRC R
+      presc.do(list.files(patt=".*mzML"),"pH",fn_cmpd_list="./Pesticides.info.csv",proc=4)
+      #+END_SRC
+      This is to be carried out inside the directory containing the
+      ~mzML~ files. For sequential execution, leave out the ~proc~
+      argument.
+   2. Plot,
+      #+BEGIN_SRC R
+      require(rmbmix)
+      presc.plot(normalizePath(list.dirs(".",recursive=F,full.names=F)))
+      #+END_SRC
+      The only argument is a sequence of absolute paths to directories
+      containing the prescreen data. The resulting plot file is going
+      to be placed into the current working directory.
+      
+      
+   
+** Record generation
+   The entire sequentual procedure,
+   #+BEGIN_SRC: R
+   pos<-rmbmix::sw.do(list.files(patt=".*pos.mzML"),fn_cmpd_list="ChemistryDashboard-Batch-Search_2019-05-15_07_27_26.csv",mode="pH")
+   pos_pmb<-rmbmix::mb.prep(pos)
+   pos_mb<-rmbmix::mb.do(pos_pmb)
+   
+   neg<-rmbmix::sw.do(list.files(patt=".*neg.mzML"),fn_cmpd_list="ChemistryDashboard-Batch-Search_2019-05-15_07_27_26.csv",mode="mH")
+   neg_pmb<-rmbmix::mb.prep(neg)
+   neg_mb<-rmbmix::mb.do(neg_pmb)
   
- The ~fn_cmpd_list~ argument is the compound list, from Chemistry
- Dashboard, or in a RMassBank format. The first argument to ~sw.do~ is
- the list of /mzML/ files containing spectral data to be processed
- using the spectral workflow. Each mzML file should have an associated
- /YAML/ file with RMassBank settings describing it. The settings file
- does not need to be complete, it can only contain the settings which
- are different from the settings template.
-
- Once the spectral workflow is complete, first run the MassBank
- preparation procedure using ~mb.prep~ function. Then, finalise the
- MassBank record workflow by using the ~mb.do~ function.
-
- The resulting record files and info lists are under
- "<data-dir>/info/XX" paths, where /data-dir/ is the mzML filename
- without the mzML suffix.
+   #+END_SRC
+   
+   The entire parallel procedure,
+   #+BEGIN_SRC: R
+   pos<-rmbmix::sw.do(list.files(patt=".*pos.mzML"),fn_cmpd_list="ChemistryDashboard-Batch-Search_2019-05-15_07_27_26.csv",mode="pH",proc=4)
+   pos_pmb<-rmbmix::mb.prep(pos)
+   pos_mb<-rmbmix::mb.do(pos_pmb,proc=4)
+   
+   neg<-rmbmix::sw.do(list.files(patt=".*neg.mzML"),fn_cmpd_list="ChemistryDashboard-Batch-Search_2019-05-15_07_27_26.csv",mode="mH",proc=4)
+   neg_pmb<-rmbmix::mb.prep(neg)
+   neg_mb<-rmbmix::mb.do(neg_pmb,proc=4)
+   
+   #+END_SRC
+   
+   The ~fn_cmpd_list~ argument is the compound list, from Chemistry
+   Dashboard, or in a RMassBank format. The first argument to ~sw.do~ is
+   the list of /mzML/ files containing spectral data to be processed
+   using the spectral workflow. Each mzML file should have an associated
+   /YAML/ file with RMassBank settings describing it. The settings file
+   does not need to be complete, it can only contain the settings which
+   are different from the settings template.
+   
+   Once the spectral workflow is complete, first run the MassBank
+   preparation procedure using ~mb.prep~ function. Then, finalise the
+   MassBank record workflow by using the ~mb.do~ function.
+   
+   The resulting record files and info lists are under
+   "<data-dir>/info/XX" paths, where /data-dir/ is the mzML filename
+   without the mzML suffix.
