--- a/README.org
+++ b/README.org
@@ -10,6 +10,8 @@
     - All boxes should have statuses. Shinydashboard defines
       ~primary~, ~success~, ~info~, ~warning~ and ~danger~.
     - Words in titles should be capitalised, except for /a/, /of/ et simile.
+    - Titles for widgets, where applicable, should consists of full
+      sentences. Yes, with a full-stop at the end.
 *** Usage Flow
     The UI should feel sequential to the user, unless the actions that
     are being performed need continuous feedback, or
