--- a/README.org
+++ b/README.org
@@ -19,9 +19,9 @@
 ** Rtools Installation
    Use ~installr~ package to download and install Rtools.
    #+BEGIN SRC R
-   install.packages("installr")   
-   library("installr")
-   install.Rtools()
+     install.packages("installr")   
+     library("installr")
+     install.Rtools()
    #+END_SRC
    This will automatically download Rtools and proceed with the default installation process.
    
@@ -77,14 +77,16 @@
 **  Alternate options
 *** Installation of Dependencies  
     Additionally some dependencies like ~mzR~, ~MSNbase~, ~RMassBank~, ~rcdk~, ~rjava~ should be manually installed if needed.
-    The [installation text](https://github.com/schymane/RChemMass/blob/master/README_installation.txt) can be referred for installing the dependencies.
+    The [installation.txt](https://github.com/schymane/RChemMass/blob/master/README_installation.txt) can be referred for installing the dependencies.
 
 *** Alternate option to download shinyscreen
-    The [shinyscreen package](https://git-r3lab.uni.lu/eci/shinyscreen) can be downloaded(~tar.gz~) from the gitlab and installed into the Rstudio. 
-    #BEGIN_SRC R
-    ## START SHINYSCREEN
-    library(shinyscreen)
-    shinyScreenApp() # shinyscreenApp(projDir=/where/I/want/to/start/the/project)
+    The [shinyscree](https://git-r3lab.uni.lu/eci/shinyscreen) can be downloaded(~tar.gz~) from the gitlab and installed into the Rstudio. 
+   
+    #+BEGIN_SRC R
+      ## START SHINYSCREEN
+      library(shinyscreen)
+      shinyScreenApp() # shinyscreenApp(projDir=/where/I/want/to/start/the/project)
+    #+END_SRC
 
 * Running Shinyscreen
   Provided Shinyscreen is successfully installed this snippet will
