--- a/README.org
+++ b/README.org
@@ -18,11 +18,13 @@
 
 ** Rtools Installation
    Use ~installr~ package to download and install Rtools.
+
    #+BEGIN SRC R
      install.packages("installr")   
      library("installr")
      install.Rtools()
    #+END_SRC
+   
    This will automatically download Rtools and proceed with the default installation process.
    
 ** R is not RStudio(tm)
@@ -77,10 +79,11 @@
 **  Alternate options
 *** Installation of Dependencies  
     Additionally some dependencies like ~mzR~, ~MSNbase~, ~RMassBank~, ~rcdk~, ~rjava~ should be manually installed if needed.
-    The [installation.txt](https://github.com/schymane/RChemMass/blob/master/README_installation.txt) can be referred for installing the dependencies.
+    please refer the link for installing the dependencies [installation.txt](https://github.com/schymane/RChemMass/blob/master/README_installation.txt). 
 
 *** Alternate option to download shinyscreen
-    The [shinyscree](https://git-r3lab.uni.lu/eci/shinyscreen) can be downloaded(~tar.gz~) from the gitlab and installed into the Rstudio. 
+    The shinyscreen package can be downloaded(~tar.gz~) from gitlab [shinyscreen](https://git-r3lab.uni.lu/eci/shinyscreen).
+    The package archive is installed and script given below runs the shinyscreen. 
    
     #+BEGIN_SRC R
       ## START SHINYSCREEN
