--- a/README.org
+++ b/README.org
@@ -16,7 +16,11 @@
   
 * Installation
 
-** Rtools Installation
+** Docker (TODO)
+
+** Straight from Gitlab(TODO)
+
+** Rtools Installation (Windows users reported this as a necessary step)
    Use ~installr~ package to download and install Rtools.
 
    #+BEGIN_SRC R
@@ -64,7 +68,7 @@
     If it is, run the installation script above, and you should have
     shinyscreen and its dependencies inside the `local' directory.
    
-** Dependency Hell
+** Minor Dependency Hell
     Perhaps there is a collision between dependencies you already have
     on your computer and what the devtools want to install. One way to
     avoid this is to follow the `.Renviron` approach from above, but
@@ -75,21 +79,10 @@
      devtools::install_local(path=SSCREEN_LOC,force=T,dependencies=FALSE)
    #+END_SRC
 
-** Install from Gitlab (TODO)
-**  Alternate options
-*** Installation of Dependencies  
-    Additionally some dependencies like ~mzR~, ~MSNbase~, ~RMassBank~, ~rcdk~, ~rjava~ should be manually installed if needed.
-    please refer the link for installing the dependencies [[https://github.com/schymane/RChemMass/blob/master/README_installation.txt][Installation help]]
-
-*** Alternate option to download shinyscreen
-    The shinyscreen package can be downloaded(~tar.gz~) from [[https://git-r3lab.uni.lu/eci/shinyscreen][gitlab]].
-    The package archive is installed and script given below runs the shinyscreen. 
-   
-    #+BEGIN_SRC R
-      ## START SHINYSCREEN
-      library(shinyscreen)
-      shinyScreenApp() # shinyscreenApp(projDir=/where/I/want/to/start/the/project)
-    #+END_SRC
+** Major Dependency Hell
+   Among Shinyscreen dependencies, ~mzR~ and ~rcdk~ have been known 
+   to cause major installation issues. Detailed explanation on how 
+   to tackle these is available [[https://github.com/schymane/RChemMass/blob/master/README_installation.txt][here]].
 
 * Running Shinyscreen
   Provided Shinyscreen is successfully installed this snippet will
