--- a/README.org
+++ b/README.org
@@ -47,7 +47,7 @@
     #+END_SRC
     
     This installation procedure should work in most situations. If you
-    to just try out the package, without installing it to some system
+    want to just try out the package, without installing it to some system
     path, you could create .Renviron in a `project' directory with the
     following content.
     #+BEGIN_SRC R
@@ -79,14 +79,18 @@
    to cause major installation issues.
    To install the dependencies use the following script
    #+BEGIN_SRC R
-     BiocManager::install(c(curl","rsvg","enviPat","rJava", "fingerprint", "png", "rcdk","mzR","rcdklibs"), dependencies=TRUE))
+     BiocManager::install(c("curl","rsvg","enviPat","rJava", "fingerprint", "png", "rcdk","mzR","rcdklibs"), dependencies=TRUE))
    #+END_SRC
-  
-   However the major issue in installing the dependencies is loading ~rjava~ library (essential rcdk functionality)
+
+   The major issue in installing the dependencies is loading ~rjava~ library (essential rcdk functionality)
    - Install the latest Java versions: [[https://www.java.com/en/][Download]]
-   - Ensure 32 bit and 64 bit versions are available for 64 bit systems.Check in C:\Program Files\Java and C:\Program Files (x86)\Java.
-   - Test if the library is loaded properly and proceed with the installation of ~RMassBank~ and ~RChemMass~.
-   Detailed explanation on how to tackle these is available [[https://github.com/schymane/RChemMass/blob/master/README_installation.txt][here]].
+   - Ensure 32 bit and 64 bit versions are available for 64 bit
+     systems. In case of Windows, check in `C:\Program Files\Java` and
+     `C:\Program Files (x86)\Java`.
+   - Test if the library is loaded properly and proceed with the
+     installation of ~RMassBank~ and ~RChemMass~.
+   Detailed explanation on how to tackle these problems is available
+   [[https://github.com/schymane/RChemMass/blob/master/README_installation.txt][here]].
 
 * Running Shinyscreen
   Provided Shinyscreen is successfully installed this snippet will
