--- a/README.org
+++ b/README.org
@@ -253,3 +253,12 @@
 ** Prescreening
    The third tab allows the visual inspection of the spectra and the
    chromatogram, as well as exporting the plots in a PDF format.
+* Thanks
+  Many thanks to the students of Masters in Integrated Systems Biology
+  course 2020/2021,
+  - Tessy Prohaska
+  - Jeff Didier
+  - Claudia Cipriani
+  - Parviel Chirsir
+
+  for boldly wading through Windows installation issues.
