--- a/README.org
+++ b/README.org
@@ -255,12 +255,12 @@
    chromatogram, as well as exporting the plots in a PDF format.
 
 * Significant Contributions (in no particular order)
-  - Anjana Elapavalore
-  - Hiba Mohammed-Taha
-  - Jessy Krier
-  - Mira Narayanan
-  - Emma Schymanski
-  - Randolph Singh (contributed good mood, mostly :-) )
+  - *Anjana Elapavalore*
+  - *Hiba Mohammed-Taha*
+  - *Jessy Krier*
+  - *Mira Narayanan*
+  - *Emma Schymanski*
+  - *Randolph Singh* (contributed good mood, mostly :-) )
 * Thanks
   Many thanks to the students of the *Masters in Integrated Systems Biology*
   course 2020/2021,
